Date	Added
11/13
	* Updated & Optimized TXT Login from FREYA. (need to do SQL now) [Codemaster]
	* Removed compile warnings in intif.c. [Valaris]
	* Fixed chrif_changesex and @changesex, now uses packet 0x3000. [MC Cameri]
        * Updated some skills, credits to orn and midas. [celest]
          - Magnum Break, Throw Stone, Sprinkle Sand, Magic Power, Memorise, Quagmire,
            Spider Web, Reject Sword, and assassin's Dodge.

11/12
	* added folder: /save-tmpl, removed folder /save
	* battle_athena.conf: Updated Packet Version Flags.
	* !!!Fixed Mobs Attacking!!!: Thanks for MagicalTux and Yor, I fixed the mobs attacking by using one of their files. [Codemaster]
	* Warps Update : Added ayothaya warps in ./npc/warps/ and in map_athena.conf [Nana]
11/11
	* Skill Updates : (Need to revise skill_cast_db.txt for new updates)
		( Sharp Shooting, Sword Reject, Chain Crush Combo, Tiger Knuckle Fist,
		Head Crush, Arrow Vulcan, HP COnversion) Thanks to DracoRPG. 
		Fixed Devotion use requeriments. Thanks to Orn.	[shadow]
11/11
	* Corrected minor typo in item_db, and removed/commented out dupe items.[kobra_k88]

11/10

	* Updated Sprout (Item #7193), Thin Trunk (Item #7186),
		Huge Leaf (Item #7198), and Rante Whip (Items #1956, #1957)
		- thanks to cheng - [Codemaster]
	* Updated Parasite (Mob #1500) Drops - thanks to cheng [Codemaster]
	* Updated Soft Grass Leaf (Item #7194) - thanks to cheng [Codemaster]
	* Added, Fixed & Updated ALOT of skills:	[Codemaster]
		- Fire Pillar, Backstab, Grimtooth, Poison React, Falcon Assalt,
		Skin Tempering, Hilt Binding, Frost Nova, TEMPORARY fix for Create Deadly Poison,
		Enchant Deadly Poison, Endure, Sacrifice, Spider Web, Memorize,
		Hyper Spirit Sphere, Palm Strike, Sword Reject, Pressure, Magic Crasher,
		Amplify Magic Power, Napalm Vulcan, True Sight, Wind Walk, Aura Blade,
		Concentration, Cart Boost, Magic Power
		- Thanks goes to Celest, Midas, and DracoRPG!